--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,46 @@
-h1{
-    color: red;
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;700&display=swap');
+
+* {
+    margin : 0;
+    padding : 0;
+    box-sizing: border-box;
+}
+
+body {
+    font-family: 'Roboto', 'sans-serif';
+}
+
+.material-icons{
+    color: rgb(96, 96, 96);
+}
+
+.header{
+    display: flex;
+    justify-content: space-between;
+    align-items: cneter;
+    height: 70px;
+    padding: 15px;
+}
+
+.header__left {
+    display: flex;
+    align-items: center;
+}
+
+.header__left img{
+    width: 100px;
+    margin-left: 15px;
+}
+
+.header i {
+    padding: 0 7px;
+    cursor: pointer;
+}
+
+.header__search form{
+    border: 1px solid #dddd;
+    height: 35px;
+    margin: 0;
+    padding: 0;
+    display: flex;
 }
